# makeltx

./: .gitignore  README.md  main.tex  makeltx.cabal  setup.sh
app/: Main.hs
docs/: template_generation.md
src/: Args.hs  Installer.hs  Latex.hs  Lib.hs  XML.hs  foo.hs
